# aides-agri

./: .buildpacks  .env.example  .gitignore  .lighthouserc.json  .slugignore  LICENSE  Pipfile  Procfile  README.md  SECURITY.md  cron.json  justfile  manage.py  nginx.conf  package-lock.json  package.json  pyproject.toml  requirements.txt  site-unavailable.html  vendor.txt  vendorize.txt
.github/: dependabot.yml
.github/workflows/: cd.yml  ci.yml  scalingo-export-requirements.yml  vendor-js-deps.yml
aides-agri/: asgi.py  urls.py  wsgi.py
aides-agri/settings/: base.py  local.py  production.py
apps/admin_concurrency/: admin.py
apps/admin_concurrency/tests/: test_admin.py
apps/agri/: README.md  admin.py  apps.py  forms.py  grist.py  importmaps.py  models.py  siret.py  tasks.py  urls.py  utils.py  views.py
apps/agri/migrations/: 0001_initial.py  (+3 more)
apps/agri_v2/: README.md  apps.py  sitemap.py  tasks.py  urls.py  views.py
apps/aides/: README.md  admin.py  grist.py  interop.py  models.py  sitemap.py  stats.py  tasks.py  urls.py  views.py
apps/aides_feedback/: admin.py  forms.py  models.py
apps/catalog/: models.py  urls.py  views.py
apps/chat/: urls.py  views.py
apps/demo/: admin.py  forms.py  models.py  urls.py  views.py
apps/grist/: loader.py
apps/integration/: README.md  apps.py  urls.py
apps/product/: admin.py  fields.py  models.py  urls.py  views.py  widgets.py
apps/questionnaire/: models.py  urls.py  views.py
apps/referentiel/: README.md  admin.py  apps.py  models.py  serializers.py  urls.py  views.py
apps/referentiel_integration/: README.md  admin.py  apps.py  models.py  serializers.py  tasks.py  urls.py  views.py
apps/stats/: models.py  registry.py  urls.py  views.py
apps/ui/: context_processors.py  importmaps.py  middlewares.py  views.py
apps/workflow/: admin.py  models.py
conf/: admin.py  urls.py  wsgi.py
conf/fixtures/: aides_02_filieres.json  aides_03_zones_geographiques.json
conf/settings/: base.py  default.py  devel.py  scalingo.py  testing.py
conf/tests/: test_admin.py
cypress/e2e/: aide.cy.js  home-besoins.cy.js  home.cy.js  results.cy.js
documentation/: README.md
documentation/adr/: decision-0001-django-templating.md  decision-0002-vendoring-dependances-frontend.md  decision-0003-django-tasks.md  decision-0003-illustrations-en-base-de-donnees.md  decision-0004-illustrations-en-base-de-donnees.md  decision-0004-utiliser-django-comme-base-de-donnees-principale-et-interface-d-edition-des-aides.md  decision-0005-admin-concurrency.md  decision-0005-utiliser-django-comme-base-de-donnees-principale-et-interface-d-edition-des-aides.md  decision-0006-admin-concurrency.md  decision-0007-django-admin-ordering.md  draft.md
documentation/dat/: README.md  architecture-logicielle.md  infrastructure-deploiement.md  securite.md
scripts/: .env  .env.example  rebase-all-upgrade-branches.sh  upgrade-python-deps.sh
scripts/create-releases-history/: README.md  main.py
scripts/data_extraction/: aide_agri.json  albert.ipynb  modèle_local.ipynb
scripts/experimentation/: albert_lm.py
scripts/experimentation_extraction_structuree/: .env  .env.example  .gitignore  CLASSIFICATION_APP_README.md  README.md  chunk_classifier.py  chunking.ipynb  classification_app.py  example_usage.py  extraction_app.py  model_comparison.ipynb  pdf_chunker.py  streamlit_app.py
scripts/experimentation_veille_aides/: .env  .env.example  README.md  memory.json  pipeline.ipynb  targets.json  test.json
scripts/logos-ddt/: README.md  create_organismes.py  download_logo_prefets.py  merge_logos.sh
scripts/logos-services-deconcentres/: README.md  create_draaf_dreal.py  download_logo_prefets.py  download_logo_prefets_regions.py  merge_logos.sh  merge_logos_draaf_dreal.sh  pyproject.toml  scalingo-upload.sh
scripts/pdf-to-structured-data/: md-to-csv.py  pyproject.toml
scripts/stress-test/: main.py  pyproject.toml
static/css/: custom.scss
templates/: base.html
templates/admin/: index_custom.html
templates/blocks/: footer.html  header.html
templates/chat/: chat.html
templates/pages/: home.html
templates/questionnaire/: questionnaire.html
webroot/.well-known/: pgp-publickey.txt  security.txt
(+390 files in other folders)
