[project]
requires-python = ">=3.13"
name = "aides-agri"
version = "0.1.0"
dependencies = [
  "beautifulsoup4 ~=4.13",
  "django ~=5.2",
  "django-admin-extra-buttons ~=2.1",
  "django-anymail[brevo] ~=13.0",
  "django-csp ~=4.0",
  "django-dsfr ~=2.1",
  "django-pgtrigger ~=4.15",
  "django-reversion ~=5.1",
  "django-tasks ~=0.6",
  "django-htmx ~=1.23",
  "django-two-factor-auth[phonenumberslite] ~=1.17",
  "gunicorn ~=23.0",
  "markdown ~=3.8",
  "markdownify ~=1.1",
  "mjml-python ~=1.3",
  "psycopg[binary] ~=3.0",
  "qrcode ~=7.4",
  "requests ~=2.32",
  "sentry-sdk[django] ~=2.26",
  "whitenoise ~=6.8",
]

[dependency-groups]
dev = [
  "djade",
  "django-browser-reload",
  "django-debug-toolbar",
  "ruff",
  "pytest",
  "pytest-cov",
  "pytest-django",
  "pytest-factoryboy",
  "requests-mock",
]

extraction = [
  "codecarbon>=3.0.5",
  "docling>=2.52.0",
  "ipykernel>=6.30.1",
  "ipywidgets>=8.1.7",
  "langchain-community>=0.3.29",
  "langchain-ollama>=0.3.8",
  "pdfminer>=20191125",
  "pypdf2>=3.0.1",
  "python-dotenv>=1.1.1",
  "streamlit>=1.49.1",
  "tiktoken>=0.11.0",
  "tqdm>=4.67.1",
  "trafilatura>=2.0.0",
  "unstructured[pdf]>=0.18.15",
  "urllib3>=2.4.0",
]

[tool.coverage.run]
omit = ["**/tests/*"]

[tool.coverage.report]
show_missing = true
