[project]
requires-python = ">=3.14"
name = "aides-agri"
version = "0.1.0"
dependencies = [
  "django~=6.0",
  "django-admin-extra-buttons~=2.2",
  "django-anymail[brevo]~=15.0",
  "django-axes ~=8.3",
  "django-csp ~=4.0",
  "django-dsfr[markdown]~=3.5",
  "django-pgtrigger ~=4.15",
  "django-reversion~=6.2",
  "django-tasks ~=0.12",
  "django-tasks-db ~=0.12",
  "django-htmx ~=1.23",
  "django-two-factor-auth[phonenumberslite]~=1.18",
  "dj-importmap ~=1.0",
  "gunicorn~=26.0",
  "markdown ~=3.8",
  "mjml-python~=1.4",
  "psycopg[binary]~=3.3",
  "qrcode ~=7.4",
  "requests~=2.34",
  "sentry-sdk[django]~=2.64",
  "whitenoise ~=6.8",
]

[dependency-groups]
dev = [
  "djade",
  "django-browser-reload",
  "django-debug-toolbar~=7.0.0",
  "ruff",
  "pytest",
  "pytest-cov",
  "pytest-django",
  "pytest-factoryboy",
  "pytest-mock",
  "requests-mock",
]

[tool.coverage.run]
omit = ["**/tests/*"]

[tool.coverage.report]
show_missing = true
